--- a/package.json
+++ b/package.json
@@ -25,6 +25,12 @@
   },
   "dependencies": {
     "autoprefixer": "^6.3.6",
+    "babel": "^6.5.2",
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-register": "^6.9.0",
     "css-loader": "^0.23.1",
     "html-loader": "^0.4.3",
     "markdown-loader": "^0.1.7",
